(almost) reglage filtres

--- a/index.html
+++ b/index.html
@@ -44,33 +44,33 @@
             <section class="filter-section">
                 <div class="title-filter">Filtres</div>
                     <div class="allcard-filter">
-                        <div class="card-filter">
+                        <button class="card-filter">
                             <div class="icon-filter">
                             <i class="fa-solid fa-money-bill-wave"></i>
                             </div>  
                                 <h3>&nbsp;Économique</h3>   
-                        </div>
+                        </button >
 
-                        <div class="card-filter">
+                        <button class="card-filter">
                             <div class="icon-filter">
                             <i class="fa-solid fa-child"></i>
                             </div>
                                 <h3>&nbsp;Familiale</h3>
-                        </div>    
+                        </button>    
             
-                        <div class="card-filter">
+                        <button class="card-filter">
                             <div class="icon-filter">
                             <i class="fa-solid fa-heart"></i>
                             </div>
                                 <h3>&nbsp;Romantique</h3>
-                        </div>    
+                        </button >    
             
-                        <div class="card-filter">
+                        <button class="card-filter dog">
                             <div class="icon-filter">
                             <i class="fa-solid fa-dog"></i>
                             </div>
                                 <h3>&nbsp;Animaux autorisés</h3>
-                        </div>
+                        </button >
                     </div>
             </section>
 
