--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                         <i class="fa-solid fa-location-dot"></i>
                     </div>
                         <input type="text" placeholder="Marseille, France" class="input">
-                        <button type="submit" class="search-button" > Rechercher </button>
-                        <i class="fa-solid fa-search"></i>   
+                        <button type="submit" class="search-button" > <div class="text">Rechercher</div> <i class="fa-solid fa-search"></i> </button>
                 </div>
             </section>
             
@@ -44,21 +43,25 @@
             <section class="filter-section">
                 <div class="title-filter">Filtres</div>
                     <div class="allcard-filter">
-                        <button class="card-filter">
+
+                        <div class="lign-filtre">
+                        <button class="card-filter money">
                             <div class="icon-filter">
                             <i class="fa-solid fa-money-bill-wave"></i>
                             </div>  
                                 <h3>&nbsp;Économique</h3>   
                         </button >
 
-                        <button class="card-filter">
+                        <button class="card-filter child">
                             <div class="icon-filter">
                             <i class="fa-solid fa-child"></i>
                             </div>
                                 <h3>&nbsp;Familiale</h3>
-                        </button>    
+                        </button>  
+                        </div>  
             
-                        <button class="card-filter">
+                        <div class="lign-filtre">
+                        <button class="card-filter heart">
                             <div class="icon-filter">
                             <i class="fa-solid fa-heart"></i>
                             </div>
@@ -70,7 +73,8 @@
                             <i class="fa-solid fa-dog"></i>
                             </div>
                                 <h3>&nbsp;Animaux autorisés</h3>
-                        </button >
+                        </button>
+                        </div>
                     </div>
             </section>
 
