--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
             <title> Booki - Trouvez votre hébergement pour des vacances de rêve</title>
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-            <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         </head>
 
         <body>
@@ -52,9 +54,9 @@
                                 <h3>&nbsp;Économique</h3>   
                         </button >
 
-                        <button class="card-filter child">
+                        <button class="card-filter person">
                             <div class="icon-filter">
-                            <i class="fa-solid fa-child"></i>
+                            <i class="fa-solid fa-person"></i></i>
                             </div>
                                 <h3>&nbsp;Familiale</h3>
                         </button>  
