--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <h3>Assistance</h3>
             <ul>
                 <li><a href="#">Centre d'aide</a></li>
-                <li><a href="#">Nous contacter</a></li>
+                <li><a href="mailto:Booki@gmail.fr">Contactez-moi</a></li>
             </ul>
         </div>
     </footer>
