--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title> Booki - Trouvez votre hébergement pour des vacances de rêve</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Booki - Trouvez votre hébergement pour des vacances de rêve</title>
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
 </head>
 
 <body>
     <header>
-        <img src="./image/logo/Booki.png" alt="logo booki">
+        <img src="./image/logo/Booki.png" alt="logo booki" />
         <nav>
             <a href="#marseille-accommodation">Hébergements</a>
             <a href="#marseille-activity">Activités</a>
@@ -27,25 +27,24 @@
 
     <section class="under-header">
         <div class="tagline-infos">
-            <h1> Trouvez votre hébergement pour des vacances de rêve</h1>
-            <p> En plein centre-ville ou en pleine nature </p>
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre-ville ou en pleine nature</p>
         </div>
 
         <div class="search-bar">
             <div class="icon-search">
                 <i class="fa-solid fa-location-dot"></i>
             </div>
-            <input type="text" placeholder="Marseille, France" class="input">
-            <button type="submit" class="search-button"> Rechercher </button>
-            <button class="search-magnifying-glass"><i class="fas fa-search"></i></button>
+            <input type="text" placeholder="Marseille, France" class="input" />
+            <button type="submit" class="search-button">Rechercher</button>
+            <button class="search-magnifying-glass">
+                <i class="fas fa-search"></i>
+            </button>
         </div>
-
-
 
         <div class="filter-section">
             <div class="title-filter">Filtres</div>
             <div class="allcard-filter">
-
                 <div class="lign-filtre">
                     <div class="card-filter money">
                         <i class="fa-solid fa-money-bill-wave"></i>
@@ -78,17 +77,15 @@
         </div>
     </section>
 
-
     <main>
         <div class="bloc-accommodation-popular">
             <section class="accommodation-section" id="marseille-accommodation">
                 <h1>Hébergements à Marseille</h1>
                 <div class="bloc-accommodation">
                     <div class="lign">
-
-                        <div class="card-accommodation">
+                        <article class="card-accommodation">
                             <a href="#">
-                                <img src="image/hebergement/3.jpg" alt="">
+                                <img src="image/hebergement/3.jpg" alt="" />
                                 <div class="text-picture-accommodation">
                                     <h2>Auberge la Cannebière</h2>
                                     <p>Nuit à partir de <strong>25€</strong></p>
@@ -101,14 +98,11 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>
+                        </article>
 
-
-
-
-                        <div class="card-accommodation">
+                        <article class="card-accommodation">
                             <a href="#">
-                                <img src="image/hebergement/6.jpg" alt="">
+                                <img src="image/hebergement/6.jpg" alt="" />
                                 <div class="text-picture-accommodation">
                                     <h2>Hôtel du port</h2>
                                     <p>Nuit à partir de 52<strong>€</strong></p>
@@ -121,13 +115,11 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>
+                        </article>
 
-
-
-                        <div class="card-accommodation">
+                        <article class="card-accommodation">
                             <a href="#">
-                                <img src="image/hebergement/9.jpg" alt="">
+                                <img src="image/hebergement/9.jpg" alt="" />
                                 <div class="text-picture-accommodation">
                                     <h2>Hôtel Les mouettes</h2>
                                     <p>Nuit à partir de 76<strong>€</strong></p>
@@ -140,14 +132,13 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>
+                        </article>
                     </div>
 
                     <div class="lign">
-
-                        <div class="card-accommodation">
+                        <article class="card-accommodation">
                             <a href="#">
-                                <img src="image/hebergement/1.jpg" alt="">
+                                <img src="image/hebergement/1.jpg" alt="" />
                                 <div class="text-picture-accommodation">
                                     <h2>Hôtel de la mer</h2>
                                     <p>Nuit à partir de 46<strong>€</strong></p>
@@ -160,13 +151,11 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>
+                        </article>
 
-
-
-                        <div class="card-accommodation">
+                        <article class="card-accommodation">
                             <a href="#">
-                                <img src="image/hebergement/8.jpg" alt="">
+                                <img src="image/hebergement/8.jpg" alt="" />
                                 <div class="text-picture-accommodation">
                                     <h2>Auberge Le Panier</h2>
                                     <p>Nuit à partir de <strong>23€</strong></p>
@@ -179,13 +168,11 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>
+                        </article>
 
-
-
-                        <div class="card-accommodation">
+                        <article class="card-accommodation">
                             <a href="#">
-                                <img src="image/hebergement/4.jpg" alt="">
+                                <img src="image/hebergement/4.jpg" alt="" />
                                 <div class="text-picture-accommodation">
                                     <h2>Hôtel chez Amina</h2>
                                     <p>Nuit à partir de 96<strong>€</strong></p>
@@ -198,13 +185,11 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>
+                        </article>
                     </div>
                 </div>
                 <span>Afficher plus</span>
             </section>
-
-
 
             <section class="popular-section">
                 <div class="title-popular">
@@ -213,9 +198,9 @@
                 </div>
 
                 <div class="bloc-popular">
-                    <div class="card-popular">
+                    <article class="card-popular">
                         <a href="#">
-                            <img src="image/hebergement/3.jpg" alt="">
+                            <img src="image/hebergement/3.jpg" alt="" />
                             <div class="text-picture-popular">
                                 <h2>Hôtel Le soleil du matin</h2>
                                 <p>Nuit à partir de 128<strong>€</strong></p>
@@ -228,13 +213,11 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
+                    </article>
 
-
-
-                    <div class="card-popular">
+                    <article class="card-popular">
                         <a href="#">
-                            <img src="image/hebergement/2.jpg" alt="">
+                            <img src="image/hebergement/2.jpg" alt="" />
                             <div class="text-picture-popular">
                                 <h2>Chambres d'hôtes Au coeur de l'eau</h2>
                                 <p>Nuit à partir de 71<strong>€</strong></p>
@@ -247,13 +230,11 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
+                    </article>
 
-
-
-                    <div class="card-popular">
+                    <article class="card-popular">
                         <a href="#">
-                            <img src="image/hebergement/5.jpg" alt="">
+                            <img src="image/hebergement/5.jpg" alt="" />
                             <div class="text-picture-popular">
                                 <h2>Hôtel Tout bleu et Blanc</h2>
                                 <p>Nuit à partir de 68<strong>€</strong></p>
@@ -266,47 +247,44 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
+                    </article>
                 </div>
             </section>
         </div>
 
-
         <section class="activity-section" id="marseille-activity">
             <h1>Activités à Marseille</h1>
             <div class="card-lign">
-                <div class="card-activity">
+                <article class="card-activity">
                     <a href="#">
-                        <img src="./image/activites/1bis.jpg" alt="">
+                        <img src="./image/activites/1bis.jpg" alt="" />
                         <h2>Vieux Port</h2>
                     </a>
-                </div>
+                </article>
 
-                <div class="card-activity">
+                <article class="card-activity">
                     <a href="#">
-                        <img src="./image/activites/2bis.jpg" alt="">
+                        <img src="./image/activites/2bis.jpg" alt="" />
                         <h2>Fort de Pomègues</h2>
                     </a>
-                </div>
+                </article>
 
-                <div class="card-activity">
+                <article class="card-activity">
                     <a href="#">
-                        <img src="./image/activites/3bis.jpg" alt="">
+                        <img src="./image/activites/3bis.jpg" alt="" />
                         <h2>Parc National des Calanques</h2>
                     </a>
-                </div>
+                </article>
 
-                <div class="card-activity">
+                <article class="card-activity">
                     <a href="#">
-                        <img src="./image/activites/4bis.jpg" alt="">
+                        <img src="./image/activites/4bis.jpg" alt="" />
                         <h2>Notre-Dame-de-la-Garde</h2>
                     </a>
-                </div>
-
+                </article>
             </div>
         </section>
     </main>
-
 
     <footer>
         <div class="section-footer">
@@ -316,7 +294,6 @@
                 <li><a href="#">Conditions générales</a></li>
                 <li><a href="#">Données et confidentialité</a></li>
             </ul>
-
         </div>
 
         <div class="section-footer">
@@ -325,7 +302,6 @@
                 <li><a href="#">Charte qualité</a></li>
                 <li><a href="#">Soumettre votre hôtel</a></li>
             </ul>
-
         </div>
 
         <div class="section-footer">
@@ -336,8 +312,6 @@
             </ul>
         </div>
     </footer>
-
-
 </body>
 
 </html>
