--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <span>Afficher plus</span>
             </section>
 
-            <section class="popular-section">
+            <aside class="popular-section">
                 <div class="title-popular">
                     <h1>Les plus populaires</h1>
                     <i class="fa-solid fa-chart-line"></i>
@@ -249,7 +249,7 @@
                         </a>
                     </article>
                 </div>
-            </section>
+            </aside>
         </div>
 
         <section class="activity-section" id="marseille-activity">
